# replica-rs

./: .gitignore  Cargo.toml  README.md  file-structure.tgz  install.sh  justfile
.replica/config/: config.toml  rolling.yaml
.test-replica/config/: config.toml  plaza-config.toml  rolling.yaml  run-config.toml  run1-config.toml  tiburon-config.toml  walk-config.toml
.test-replica/data/: files.json  run1-file.json  run2-file.json
config/: config.toml  console.yaml  plaza-config.toml  tiburon-config.toml
coverage/: index.html
data/: files.json
pages/: gemail-notes.html  npm-git.html  old-age.html  openai-api-notes.html  pbook.html  photo-ref-music.html  tpage.html
src/: backup_process.rs  backup_queue.rs  config.rs  db_ops.rs  file_model.rs  file_store.rs  file_walker.rs  kv_store.rs  lib.rs  main.rs
tests/: .gitignore  changed-file.txt  config.toml  file4.txt
tests/.config/: file1.txt  file2.txt  file3.txt
tests/.replica/config/: config.toml  console.yaml  run-config.toml  walk-config.toml
tests/.replica/data/: files.json
tests/data/: files.json  saved.json
tests/tback/: file1.txt  file3.txt
