[package]
name = "replica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
log = "0.4.17"
log4rs = "1.2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5.9"
reqwest = { version = "0.11", features = ["json"] }
hashbrown = { version = "0.13.1", features = ["serde"] }
