[package]
name = "replica"
version = "0.2.3"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.70"
description = "Backup local files to various targets"
keywords = ["backup" ]
license = "Apach-2.0"
readme = "README.md"
homepage = "https://github.com/darrylwest/replica-rs"
repository = "https://github.com/darrylwest/replica-rs"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5.9"
reqwest = { version = "0.11", features = ["json"] }
hashbrown = { version = "0.13.1", features = ["serde"] }
openssl = "0.10.43"
hex = "0.4.3"
walkdir = "2.3.2"
subprocess = "0.2.9"
